v0.08.01 - update analysis html with switching input file button and preview image, adddition of image preview displayment. It is shown on correct image upload and Input button is hidden, also btn is shown if preview does not exist or file is invalid. Preview and input button now are packed into div so the image can be resized in css. Also, css is styling preview and changes pointer after preview is shown, so it is visible that it can be clicked for file re-upload. Rearrangements about all preview/input button working is added in analysis asset component ts file, addition of file reader that ansis the file, some validations and protections from invalid preview displayment or fileReading. + a lot of comments added

--- a/invKeepFrontend/src/app/components/asset-analysis/asset-analysis.component.scss
+++ b/invKeepFrontend/src/app/components/asset-analysis/asset-analysis.component.scss
@@ -182,3 +182,13 @@ tr.no-highlight:hover {
 #file-upload-cell-description {
   font-weight: 500;
 }
+
+#image-prv {
+  max-width: 5rem;
+  max-height: 5rem;
+  cursor: pointer;
+}
+
+.img-prv-btn{
+  height: 100%;
+}
